[package]
name = "barista"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
toml = "0.7.6"
serde = { version = "1.0.183", features = ["derive"] }
reqwest= "0.11.18"
tokio = { version = "1.31.0", features = ["full"] }
quick-xml={ version = "0.30.0", features = ["serialize", "overlapped-lists"]}
semver = {version= "1.0.18", features = ["serde"]}
lenient_semver = {version= "0.4.2", features = ["version_serde"]}
async-recursion = "1.0.4"