[workspace]

members = ["javac", "javaup", "barista"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.0"
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
reqwest = { version = "0.11.20", features = ["json"] }
thiserror = "1.0.47"
