[package]
name = "barista"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
quick-xml = { version = "0.30.0", features = ["serialize", "overlapped-lists"] }
semver = { version = "1.0.18", features = ["serde"] }
lenient_semver = { version = "0.4.2", features = ["version_serde"] }
async-recursion = "1.0.5"
javaup = { path = "../javaup", version = "0.1.0" }
