[package]
name = "javaup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json= "1.0.105"
reqwest= {version = "0.11.19", features = ["json"]}
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
clap = { version = "4.3.23", features = ["derive"] }
tar = "0.4"
# older version used b/c it has nice constants
platforms = "2.0.0"
dirs = "5.0.1"
flate2 = "1.0.27"