[package]
name = "javaup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json= "1.0.105"
serde = {workspace = true}
toml = {workspace = true}
clap = {workspace = true}
reqwest = {workspace = true}
tokio = {workspace = true}
tar = "0.4"
# older version used b/c it has nice constants
platforms = "2.0.0"
dirs = "5.0.1"
flate2 = "1.0.27"